Fix navbar/viewcourse z-index

--- a/application/src/assets/css/style.scss
+++ b/application/src/assets/css/style.scss
@@ -1095,7 +1095,7 @@ Element UI Custom
 
 .nav-sticky {
   position: sticky;
-  z-index: 99999 !important;
+  z-index: 9999 !important;
   top: 0;
   width: 100%;
 }
